force-app/main/default/objects/UtilityAccount__c/UtilityAccount__c.object-meta.xml
<CustomObject>
    <description>A custom object (created by the Urjanet Connect app) to store utility account information</description>
    <label>Utility Account</label>
    <nameField>
        <label>Utility Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Utility Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>