force-app/main/default/objects/UtilityAccount__c/fields/AccountNumber__c.field-meta.xml
<CustomField>
    <fullName>AccountNumber__c</fullName>
    <description>The Account number as extracted from the source.</description>
    <inlineHelpText>The Account number as extracted from the source.</inlineHelpText>
    <label>Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>