force-app/main/default/objects/UtilityAccount__c/fields/CreatedByInUrjanet__c.field-meta.xml
<CustomField>
    <fullName>CreatedByInUrjanet__c</fullName>
    <description>The system user responsible for creating the account in Arcadia&apos;s system.</description>
    <inlineHelpText>The system user responsible for creating the account in Arcadia&apos;s system.</inlineHelpText>
    <label>Created By in Arcadia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>