force-app/main/default/objects/UtilityAccount__c/fields/Enabled__c.field-meta.xml
<CustomField>
    <fullName>Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if an account is active (meaning Urjanet is actively monitoring the account).</description>
    <inlineHelpText>Indicates if an account is active (meaning Urjanet is actively monitoring the account).</inlineHelpText>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>