force-app/main/default/objects/UtilityAccount__c/fields/LastModifiedByInUrjanet__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedByInUrjanet__c</fullName>
    <description>The system user responsible for modifying an account most recently in the Arcadia system.</description>
    <inlineHelpText
    >The system user responsible for modifying an account most recently in the Arcadia system.</inlineHelpText>
    <label>Last Modified By in Arcadia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>