force-app/main/default/objects/UtilityAccount__c/fields/LatestNewStatement__c.field-meta.xml
<CustomField>
    <fullName>LatestNewStatement__c</fullName>
    <description>This represents when Urjanet most recently stored any newly extracted data for this account.</description>
    <inlineHelpText>This represents when Urjanet most recently stored any newly extracted data for this account.</inlineHelpText>
    <label>Latest New Statement</label>
    <type>DateTime</type>
</CustomField>