force-app/main/default/objects/UtilityAccount__c/fields/LatestStatementDate__c.field-meta.xml
<CustomField>
    <fullName>LatestStatementDate__c</fullName>
    <description>This is the most recent statement date among all statements extracted for this account.</description>
    <inlineHelpText
    >This is the most recent statement date among all statements extracted for this account.</inlineHelpText>
    <label>Latest Statement Date</label>
    <type>Date</type>
</CustomField>