force-app/main/default/objects/UtilityAccount__c/fields/Prepaid__c.field-meta.xml
<CustomField>
    <fullName>Prepaid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that an account is prepaid.</description>
    <inlineHelpText>Indicates that an account is prepaid.</inlineHelpText>
    <label>Prepaid</label>
    <type>Checkbox</type>
</CustomField>