force-app/main/default/objects/UtilityAccount__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Account-level statuses that let you know if there are any issues accessing the account or the statement behind the account.</description>
    <inlineHelpText>Account-level statuses that let you know if there are any issues accessing the account or the statement behind the account.</inlineHelpText>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>