force-app/main/default/objects/UtilityAccount__c/fields/StatusDetail__c.field-meta.xml
<CustomField>
    <fullName>StatusDetail__c</fullName>
    <description>A detailed status for the account.</description>
    <inlineHelpText>A detailed status for the account.</inlineHelpText>
    <label>Status Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>