force-app/main/default/objects/UtilityAccount__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Supplier</label>
    <referenceTo>Supplier</referenceTo>
    <relationshipLabel>Utility Accounts</relationshipLabel>
    <relationshipName>UtilityAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>