force-app/main/default/objects/UtilityAccount__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Indicates if an account is a normal account, summary account, or sub-account. Responses are NORMAL, SUMMARY, and SUB_ACCOUNT.</description>
    <inlineHelpText>Indicates if an account is a normal account, summary account, or sub-account. Responses are NORMAL, SUMMARY, and SUB_ACCOUNT.</inlineHelpText>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>