force-app/main/default/objects/UtilityAccount__c/fields/UtilityCredential__c.field-meta.xml
<CustomField>
    <fullName>UtilityCredential__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Utility Credential</label>
    <referenceTo>UtilityCredential__c</referenceTo>
    <relationshipLabel>Utility Accounts</relationshipLabel>
    <relationshipName>UtilityAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>