force-app/main/default/objects/UtilityAccount__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>StatusDetail__c</columns>
    <columns>AccountNumber__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>